wier/force-app/main/default/objects/Invoice_Line_Items__c/fields/Arabic_ID__c.field-meta.xml
<CustomField>
    <fullName>Arabic_ID__c</fullName>
    <label>Level 1 Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>