wier/force-app/main/default/objects/Invoice_Line_Items__c/fields/Flag__c.field-meta.xml
<CustomField>
    <fullName>Flag__c</fullName>
    <formula>IF( AND(Product_Code__c  &lt;&gt; &apos;P01002&apos;,Product_Code__c  &lt;&gt; &apos;P01023&apos;,  NOT(ISBLANK( Arabic_ID__c ) ) ), &apos;Code&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flag</label>
    <type>Text</type>
</CustomField>