wier/force-app/main/default/objects/Invoice_Line_Items__c/fields/Image_Link__c.field-meta.xml
<CustomField>
    <fullName>Image_Link__c</fullName>
    <formula>&apos;/resource/1588667083000/P01012&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image Link</label>
    <type>Text</type>
</CustomField>