wier/force-app/main/default/objects/Invoice_Line_Items__c/fields/Level_12_Link__c.field-meta.xml
<CustomField>
    <fullName>Level_12_Link__c</fullName>
    <label>Level 12 Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>