wier/force-app/main/default/objects/Invoice_Line_Items__c/fields/Line__c.field-meta.xml
<CustomField>
    <fullName>Line__c</fullName>
    <label>Line</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>