wier/force-app/main/default/objects/Invoice_Line_Items__c/fields/Line_Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Description__c</fullName>
    <label>Line Item Description</label>
    <type>TextArea</type>
</CustomField>