wier/force-app/main/default/objects/Invoice_Line_Items__c/fields/Product_Detail_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Product_Detail_Arabic__c</fullName>
    <label>Product Detail Arabic</label>
    <type>TextArea</type>
</CustomField>