wier/force-app/main/default/objects/Invoice_Line_Items__c/fields/Product_Detatil__c.field-meta.xml
<CustomField>
    <fullName>Product_Detatil__c</fullName>
    <label>Product Detatil</label>
    <type>TextArea</type>
</CustomField>