wier/force-app/main/default/objects/Invoice_Line_Items__c/fields/Total_PriceVal__c.field-meta.xml
<CustomField>
    <fullName>Total_PriceVal__c</fullName>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>