wier/force-app/main/default/objects/Invoice_Line_Items__c/fields/VAT_Rate__c.field-meta.xml
<CustomField>
    <fullName>VAT_Rate__c</fullName>
    <label>VAT Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>